force-app/main/default/objects/Device__x/Device__x.object-meta.xml
<CustomObject>
    <externalDataSource>DigitalIdentity</externalDataSource>
    <externalName>Device</externalName>
    <label>Device</label>
    <pluralLabel>Devices</pluralLabel>
</CustomObject>