force-app/main/default/objects/Device__x/fields/AppCorrelationId__c.field-meta.xml
<CustomField>
    <fullName>AppCorrelationId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the app correlation ID</description>
    <label>App Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>