force-app/main/default/objects/Device__x/fields/AppVersion__c.field-meta.xml
<CustomField>
    <fullName>AppVersion__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the version of the application</description>
    <label>App Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>