force-app/main/default/objects/Device__x/fields/BiometricId__c.field-meta.xml
<CustomField>
    <fullName>BiometricId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the biometric credential ID</description>
    <label>Biometric ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>