force-app/main/default/objects/Device__x/fields/BiometricRegisteredTime__c.field-meta.xml
<CustomField>
    <fullName>BiometricRegisteredTime__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the time when the biometric was registered</description>
    <label>Registered Time</label>
    <type>DateTime</type>
</CustomField>