force-app/main/default/objects/Device__x/fields/BiometricStatus__c.field-meta.xml
<CustomField>
    <fullName>BiometricStatus__c</fullName>
    <complianceGroup>Integrity - Accurate;Privacy - Non Personal Information;Source - Aegis</complianceGroup>
    <description>Field that holds the biometric status of the device</description>
    <label>Biometric Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>STATE_ACTIVE</fullName>
                <label>Active</label>
            </value>
            <value>
                <fullName>STATE_DISABLED</fullName>
                <label>Disabled</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>