force-app/main/default/objects/Device__x/fields/DeviceCorrelationId__c.field-meta.xml
<CustomField>
    <fullName>DeviceCorrelationId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the device correlation ID</description>
    <label>Device Correlation ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>