force-app/main/default/objects/Device__x/fields/LastAuthenticationTime__c.field-meta.xml
<CustomField>
    <fullName>LastAuthenticationTime__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the time when the key was last authenticated</description>
    <label>Last Authentication Time</label>
    <type>DateTime</type>
</CustomField>