force-app/main/default/objects/Device__x/fields/Make__c.field-meta.xml
<CustomField>
    <fullName>Make__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the make of the device</description>
    <label>Make</label>
    <length>255</length>
    <type>Text</type>
</CustomField>