force-app/main/default/objects/Device__x/fields/Model__c.field-meta.xml
<CustomField>
    <fullName>Model__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the model of the device</description>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>