force-app/main/default/objects/Device__x/fields/OSVersion__c.field-meta.xml
<CustomField>
    <fullName>OSVersion__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the OS version of the device</description>
    <label>OS Version</label>
    <length>255</length>
    <type>Text</type>
</CustomField>