force-app/main/default/objects/Device__x/fields/PersonId__c.field-meta.xml
<CustomField>
    <fullName>PersonId__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the time when the key was last authenticated</description>
    <label>Person Digital Identity</label>
    <length>255</length>
    <referenceTo>PersonDigitalIdentity__x</referenceTo>
    <relationshipLabel>Devices</relationshipLabel>
    <relationshipName>Devices</relationshipName>
    <type>ExternalLookup</type>
</CustomField>