force-app/main/default/objects/Device__x/fields/UpdatedTime__c.field-meta.xml
<CustomField>
    <fullName>UpdatedTime__c</fullName>
    <complianceGroup>Integrity_Accurate;Privacy_Non_Personal_Information;Source_Aegis</complianceGroup>
    <description>Field that holds the Updated Time of the Passkey</description>
    <label>Updated Time</label>
    <type>DateTime</type>
</CustomField>